--- a/static/assets/css/makeup.css
+++ b/static/assets/css/makeup.css
@@ -292,6 +292,12 @@ img {
 	color: #223;
 }
 
+.post-picture {
+	padding: 0;
+	margin: 0 auto;
+	text-align: center;
+}
+
 
 /* [6] Pages
 ------------------------------------------------------------------------------*/
