--- a/layouts/partials/fold.html
+++ b/layouts/partials/fold.html
@@ -9,8 +9,6 @@
             </p>
         </footer>
 
-        <script src="//ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
-        <script>window.jQuery || document.write('<script src="/assets/js/jquery-2.1.3.min.js"><\/script>')</script>
         <script src="/assets/js/mobile.js"></script>
         <script type="text/javascript">
             var _paq = _paq || [];
@@ -24,4 +22,4 @@
                 g.type='text/javascript'; g.async=true; g.defer=true; g.src=u+'piwik.js'; s.parentNode.insertBefore(g,s);
             })();
         </script>
-        <noscript><p><img src="//stats.thomasgirard.fr/piwik.php?idsite=1" style="border:0;" alt="" /></p></noscript>
+        <noscript><img src="http://stats.thomasgirard.fr/piwik.php?idsite=1" width="1" height="1" alt="" /></noscript>
