--- a/layouts/partials/list-children.html
+++ b/layouts/partials/list-children.html
@@ -1,9 +1,9 @@
 
     {{ if .Site.BuildDrafts }}<div class="wip" role="log" aria-label="Status du site">Prévisualisation du travail en cours</div>{{ end }}
     {{ range .Paginator.Pages }}
-        <article class="post post-item" itemprop="hasPart" itemscope itemtype="http://schema.org/BlogPosting">
+        <article class="post post-item" itemprop="blogPost" itemscope itemtype="http://schema.org/BlogPosting">
             <header>
-                <h3 class="post-title" itemprop="title"><a href="{{ .Permalink }}" itemprop="url"{{ if .Params.lang }} hreflang="{{ .Params.lang }}"{{ end }}>{{ .Title }}</a></h3>
+                <h3 class="post-title" itemprop="name"><a href="{{ .Permalink }}" itemprop="url"{{ if .Params.lang }} hreflang="{{ .Params.lang }}"{{ end }}>{{ .Title }}</a></h3>
                 <div class="meta">Publié le <time datetime="{{ .Date.Format "2006-01-02" }}" itemprop="datePublished">{{ .Date.Format "02/01/2006" }}</time> &middot;
                 <small>Temps de lecture estimé à <em>{{ .ReadingTime }} minute{{ if gt .ReadingTime 1 }}s{{ end }}</em></small></div>
                 {{ partial "draft.html" . }}
