--- a/layouts/partials/accessibility.html
+++ b/layouts/partials/accessibility.html
@@ -11,11 +11,10 @@
 <meta itemprop="accessibilityHazard" content="noSoundHazard" />
 <meta itemprop="accessibilityAPI" content="ARIA" />
 
-<nav id="skip-intro" class="sr-only">
-    <h2>Sommaire du site</h2>
+<div id="skip-intro" class="sr-only">
     <ul>
-        <li id="goto-menu"><a href="#menu" aria-label="Aller au menu"><span aria-visibility="hidden" class="icon">Menu</span></a></li>
-        <li id="goto-content"><a href="#content" aria-label="Aller au contenu principal">Aller au contenu</a></li>
-        <li><a href="https://github.com/vuzonp/hugo-theme-aeris/issues" title="Signaler un problème">Contact technique</a></li>
+        <li id="goto-menu"><a href="#menu" aria-label="Aller au menu [3]" tabindex="3" accesskey="3">Menu</a></li>
+        <li id="goto-content"><a href="#content" title="Aller au contenu principal [2]" tabindex="1" accesskey="2">Aller au contenu</a></li>
+        <li><a href="https://github.com/vuzonp/hugo-theme-aeris/issues" title="Signaler un problème [0]" accesskey="0">Contact technique</a></li>
     </ul>
-</nav>
+</div>
