--- a/layouts/partials/banner.html
+++ b/layouts/partials/banner.html
@@ -1,6 +1,6 @@
 <header id="banner" role="banner">
 	<div>
-		<h1 id="sitename"><a href="{{ .Site.BaseUrl }}">{{ .Site.Title }}</a></h1>
+		<h1 id="sitename" aria-label="Nom du site"><a href="{{ .Site.BaseUrl }}" tabindex="2" accesskey="1"><strong>{{ .Site.Title }}</strong></a></h1>
 	    <p><strong>{{ .Site.Params.subtitle }}</strong></p>
     </div>
 </header>
