--- a/layouts/index.html
+++ b/layouts/index.html
@@ -3,8 +3,8 @@
     <head>
     	<meta charset="utf-8">
     	<meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>{{ .Title }} &middot; {{ .Site.Params.subtitle }}</title>
-        <meta name="description" content="{{ .Description }}">
+        <title>{{ .Title }} &middot; {{ .Site.Params.subtitle }} | Page d'accueil</title>
+        <meta name="description" content="{{ .Site.Params.Description }}">
         <link rel="stylesheet" href="{{ .Site.BaseUrl }}/assets/css/makeup.css" />
         <base href="{{ .Site.BaseUrl }}">
         <link rel="canonical" href="{{ .Permalink }}">
@@ -42,24 +42,26 @@
             <meta itemprop="inLanguage" content="{{ .Site.LanguageCode }}" />
             <meta itemprop="url" content="{{ .Site.BaseUrl }}/" />
 
-            <h2 class="sr-only">Dernières publications</h2>
-            {{ $paginator := .Paginate (where .Data.Pages "Type" "post") }}
-            {{ partial "list-children.html" . }}
-            <nav class="pagination">
-                {{ if .Paginator.HasPrev }}
-                <div class="inline"><a href="{{ .Paginator.Prev.Url }}" aria-label="Articles plus récents" title="Articles plus récents"><span aria-visibility="hidden">&laquo;</span></a></div>
-                {{ end }}
-                <div class="inline">
-                    <a href="{{ .Site.BaseUrl }}" aria-label="Revenir à l'accueil" title="Revenir à l'accueil" itemprop="url">
-                        <svg  class="icon small icon-home" viewBox="0 0 100 100">
-                            <path d="M 0 100 L 0 50 L 50 0 L 100 50 L 100 100 L 65 100 L 65 70 L 45 70 L 45 100 Z" stroke="none" />
-                        </svg>
-                    </a>
-                </div>
-                {{ if .Paginator.HasNext }}
-                <div class="inline"><a href="{{ .Paginator.Next.Url }}" aria-label="Articles plus anciens" title="Articles plus anciens"><span aria-visibility="hidden">&raquo;</span></a></div>
-                {{ end }}
-            </nav>
+            <div id="last-updates">
+                {{ $paginator := .Paginate (where .Data.Pages "Type" "post") }}
+                <h2 class="sr-only">Dernières publications <var>{{ .Paginator.PageNumber }}/{{ .Paginator.TotalPages }}</var></h2>
+                {{ partial "last-updates.html" . }}
+                <nav class="pagination">
+                    {{ if .Paginator.HasPrev }}
+                    <div class="inline"><a href="{{ .Paginator.Prev.Url }}" aria-label="Articles plus récents" title="Articles plus récents"><span aria-visibility="hidden">&laquo;</span></a></div>
+                    {{ end }}
+                    <div class="inline">
+                        <a href="{{ .Site.BaseUrl }}" aria-label="Revenir à l'accueil" title="Revenir à l'accueil" itemprop="url">
+                            <svg  class="icon small icon-home" viewBox="0 0 100 100">
+                                <path d="M 0 100 L 0 50 L 50 0 L 100 50 L 100 100 L 65 100 L 65 70 L 45 70 L 45 100 Z" stroke="none" />
+                            </svg>
+                        </a>
+                    </div>
+                    {{ if .Paginator.HasNext }}
+                    <div class="inline"><a href="{{ .Paginator.Next.Url }}" aria-label="Articles plus anciens" title="Articles plus anciens"><span aria-visibility="hidden">&raquo;</span></a></div>
+                    {{ end }}
+                </nav>
+            </div>
         </main>
 
         {{ partial "fold.html" . }}
