--- a/static/assets/css/makeup.css
+++ b/static/assets/css/makeup.css
@@ -1,6 +1,7 @@
 
 /* [0] Misc
 ------------------------------------------------------------------------------*/
+
 html {
     font-size: 100%; /* 1 */
     -ms-text-size-adjust: 100%; /* 2 */
@@ -519,7 +520,6 @@ table {
 		border-color: #223;
 		z-index: 9999;
 		max-height: 100%;
-		overflow-y: auto;
 	}
 
 	#menu li {
@@ -534,6 +534,7 @@ table {
 		height: 1.5em;
 		line-height: 1.5em;
 	}
+
 	#menu a:hover {
 		color: #eef4d7;
 		cursor: default;
@@ -545,6 +546,7 @@ table {
 		width: 1em;
 		transition: all ease .75s;
 	}
+
 	#menu a {
 		display: block;
 		width: 100%;
@@ -552,6 +554,10 @@ table {
 		opacity: 0;
 		transition: .75s opacity ease .75s;
 	}
+
+    #menu.opened {
+        overflow-y: auto;
+    }
 
 	#menu.opened li {
 		height: auto;
@@ -608,4 +614,25 @@ table {
 	body {
 		text-rendering: geometricPrecision;
 	}
+}
+
+
+/* [10] Viewports
+------------------------------------------------------------------------------*/
+
+@-o-viewport, @-ms-viewport, @viewport { width: device-width; zoom: 1; }
+
+@media screen {
+  @-ms-viewport {
+    width: 1024px;
+    height: 768px;
+  }
+  @-o-viewport {
+    width: 1024px;
+    height: 768px;
+  }
+  @viewport {
+    width: 1024px;
+    height: 768px;
+  }
 }
