--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -6,7 +6,7 @@
 
         {{ "<!--[if lt IE 9]>" | safeHtml }}<script src="//cdnjs.cloudflare.com/ajax/libs/html5shiv/r29/html5.min.js"></script>{{ "<![endif]-->" | safeHtml }}
 
-        <link rel="stylesheet" href="{{ .Site.BaseUrl }}/assets/css/makeup.css" />
+        <link rel="stylesheet" href="{{ .Site.BaseUrl }}/css/aeris.min.css" />
         <base href="{{ .Site.BaseUrl }}" />
         <link rel="canonical" href="{{ .Permalink }}" />
         {{ if .RSSlink }}<link href="{{ .RSSlink }}" rel="alternate" type="application/rss+xml" title="{{ .Title }}" />{{ end }}
