--- a/layouts/_default/list.html
+++ b/layouts/_default/list.html
@@ -4,13 +4,35 @@
         {{ partial "head.html" . }}
     </head>
     <body id="listpage" itemscope itemtype="http://schema.org/WebPage">
-        {{ partial "banner.html" . }}
-        {{ partial "menu.html" . }}
-        <main id="content" role="main">
-            <h2 id="headline">{{ .Title }}{{ if .Paginator.HasNext }} <var>{{ .Paginator.PageNumber }}/{{ .Paginator.TotalPages }}{{ end }}</var></h2>
-            {{ partial "last-updates.html" . }}
-        </main>
-        {{ partial "pagination.html" . }}
-        {{ partial "fold.html" . }}
+
+        <!-- Navbar -->
+        {{ partial "navbar.html" . }}
+
+        <!-- Structure -->
+        <div id="main-wrapper">
+            <div id="row-wrapper">
+                <!-- Menu -->
+                {{ partial "menu.html" . }}
+
+                <div id="content-wrapper">
+                    <main id="content" class="section" role="main">
+
+                        {{ if .Params.author }}<meta itemprop="author" content="{{ .Params.author }}" />
+                        {{ else }}<meta itemprop="author" content="{{ .Site.Params.author }}" />{{ end }}
+                        <meta itemprop="dateModified" content="{{ .Site.LastChange.Format "2006-01-02" }}" />
+                        <meta itemprop="headline" content="{{ .Title }}" />
+                        <meta itemprop="inLanguage" content="{{ .Site.LanguageCode }}" />
+                        <meta itemprop="url" content="{{ .Site.BaseUrl }}/" />
+
+                        <div id="last-updates">
+                            <h2 id="headline">{{ .Title }}{{ if .Paginator.HasNext }} <var>{{ .Paginator.PageNumber }}/{{ .Paginator.TotalPages }}{{ end }}</var></h2>
+                            {{ partial "last-updates.html" . }}
+                        </div>
+                    </main>
+                    {{ partial "pagination.html" . }}
+                    {{ partial "footer.html" . }}
+                </div>
+            </div>
+        </div>
     </body>
 </html>
