Assigning a dom id to the menu

--- a/layouts/partials/navbar.html
+++ b/layouts/partials/navbar.html
@@ -14,7 +14,7 @@
         <nav id="navbar">
             <ul>
                 <li>
-                    <a href="#menu" aria-label="Aller au menu [3]" tabindex="3" accesskey="3">
+                    <a id="menu-btn" href="#menu" aria-label="Aller au menu [3]" tabindex="3" accesskey="3">
                         <svg viewbox="0 0 100 100" aria-label="toggle menu" role="img">
                             <title>Menu</title>
                             <g stroke="none">
